--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "2.0.2"
+  "version": "2.0.2",
+  "repository":{
+    "type":"github",
+    "url":"https://github.com/nuntius-rex/node-mvc-create.git"
+  }
 }
