--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "main": "index.js",
   "name": "mvccreate",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "start": "node index.js"
   },
   "version": "2.0.6",
   "repository": {
